# bookle

./: .env.example
leitor/: .dockerignore  README.md  docker-compose.yml
leitor/apps/api/: Dockerfile  README.md  pyproject.toml
leitor/apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  worker.py
leitor/apps/ingest/: README.md  pyproject.toml
leitor/apps/ingest/ingest/: __init__.py  classify.py  clean.py  cli.py  emit.py  extract.py  image_mode.py  ocr.py  pipeline.py  structure.py
leitor/apps/web/: Dockerfile  README.md  next.config.mjs  nginx.conf  package-lock.json  package.json
leitor/apps/web/app/: globals.css  layout.tsx  page.tsx
leitor/apps/web/app/lib/: api.ts
leitor/apps/web/app/read/: ImageReader.tsx  Reader.tsx  page.tsx  usePageGestures.ts
leitor/apps/web/public/: manifest.json  sw.js
