[project]
name = "leitor-api"
version = "0.1.0"
description = "API FastAPI do leitor pessoal de PDFs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "arq>=0.26",
    "python-multipart>=0.0.9",   # necessário pro upload de arquivos no FastAPI
    "pydantic-settings>=2.4",
    "leitor-ingest",             # o pipeline; instale com: pip install -e ../ingest
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
